fixed z-index

--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -96,7 +96,7 @@ body {
           }
       }
       .content-wrapper {
-          z-index: 3;
+          z-index: 1;
          position: relative;
          top: 0;
          left: 0;
